syntax = "proto3";
package comdex.collector.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "comdex/collector/v1beta1/params.proto";
import "comdex/collector/v1beta1/collector.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/comdex-official/comdex/x/collector/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex-official/comdex/collector/params";
  }
  rpc QueryCollectorLookupByProduct(QueryCollectorLookupByProductRequest) returns (QueryCollectorLookupByProductResponse) {
    option (google.api.http).get = "/comdex/collector/v1beta1/collector-lookup-by-product/{app_id}";
  };
  rpc QueryCollectorLookupByProductAndAsset(QueryCollectorLookupByProductAndAssetRequest) returns (QueryCollectorLookupByProductAndAssetResponse) {
    option (google.api.http).get = "/comdex/collector/v1beta1/collector-lookup-by-product-and-asset/{app_id}/{asset_id}";
  };
  rpc QueryCollectorDataByProductAndAsset(QueryCollectorDataByProductAndAssetRequest) returns (QueryCollectorDataByProductAndAssetResponse) {
    option (google.api.http).get = "/comdex/collector/v1beta1/collector-data-by-product-and-asset/{app_id}/{asset_id}";
  };
  rpc QueryAuctionMappingForAppAndAsset(QueryAuctionMappingForAppAndAssetRequest) returns (QueryAuctionMappingForAppAndAssetResponse) {
    option (google.api.http).get = "/comdex/collector/v1beta1/auction-data-by-product-and-asset/{app_id}/{asset_id}";
  };
  rpc QueryNetFeeCollectedForAppAndAsset(QueryNetFeeCollectedForAppAndAssetRequest) returns (QueryNetFeeCollectedForAppAndAssetResponse) {
    option (google.api.http).get = "/comdex/collector/v1beta1/net-fee-data-by-product-and-asset/{app_id}/{asset_id}";
  };

  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3

message QueryCollectorLookupByProductRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}
message QueryCollectorLookupByProductResponse {
  repeated CollectorLookupTable collectorLookup = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"collectorLookup\"" ];

}
message QueryCollectorLookupByProductAndAssetRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}
message QueryCollectorLookupByProductAndAssetResponse {
  CollectorLookupTable collectorLookup = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"collectorLookup\"" ];

}

message QueryCollectorDataByProductAndAssetRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}
message QueryCollectorDataByProductAndAssetResponse {
  CollectorData collectorData = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"collectorData\"" ];

}

message QueryAuctionMappingForAppAndAssetRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}
message QueryAuctionMappingForAppAndAssetResponse {
  AssetIdToAuctionLookupTable assetIdToAuctionLookupTable = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"assetIdToAuctionLookupTable\"" ];

}

message QueryNetFeeCollectedForAppAndAssetRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}
message QueryNetFeeCollectedForAppAndAssetResponse {
  AssetIdToFeeCollected assetIdToFeeCollected = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"assetIdToFeeCollected\"" ];

}